tests/compile_fail/012_element_set_unknown_target.vox
a number called "value" is element 1 of missing.
